--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
 
 <header class="bg-white">
     <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
-        <a href="/static" class="text-xl font-bold text-red-600">F1 Site</a>
+        <a href="/" class="text-xl font-bold text-red-600">F1 Site</a>
 
         <nav class="hidden md:flex mx-auto space-x-6 font-medium">
             <a href="/teams">Teams</a>
