--- a/static/champions.html
+++ b/static/champions.html
@@ -43,7 +43,7 @@
 
     <main class="col-span-12 md:col-span-8 bg-white p-6 shadow rounded">
 
-        <a href="/static" class="inline-block mb-4 text-sm font-medium">
+        <a href="/" class="inline-block mb-4 text-sm font-medium">
             ← Back
         </a>
 
