--- a/static/seo.html
+++ b/static/seo.html
@@ -46,7 +46,7 @@
     <!-- MAIN -->
     <main class="col-span-12 md:col-span-8 bg-white p-6 shadow rounded">
 
-        <a href="/static" class="inline-block mb-4 text-sm font-medium text-slate-600 hover:text-red-600">← Back</a>
+        <a href="/" class="inline-block mb-4 text-sm font-medium text-slate-600 hover:text-red-600">← Back</a>
 
         <h1 class="text-2xl font-bold mb-2">SEO – F1 Championship</h1>
         <p class="text-slate-600 mb-6">
