--- a/static/teams.html
+++ b/static/teams.html
@@ -44,7 +44,7 @@
 
     <main class="col-span-12 md:col-span-8 bg-white p-6 shadow rounded">
 
-        <a href="/static" class="inline-block mb-4 text-sm font-medium text-slate-600">← Back</a>
+        <a href="/" class="inline-block mb-4 text-sm font-medium text-slate-600">← Back</a>
 
         <section>
             <h1 class="text-2xl font-bold mb-6">F1 Teams 2026</h1>
