Add clickable images

--- a/static/index.html
+++ b/static/index.html
@@ -46,7 +46,7 @@
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-8">
             <div class="h-64 flex items-center justify-center">
-                <img src="/f1.png" alt="F1 Logo 2026" class="h-64">
+                <img src="/images/f1.png" alt="F1 Logo 2026" class="h-64">
             </div>
 
             <div>
