--- a/static/screenshots.html
+++ b/static/screenshots.html
@@ -46,29 +46,19 @@
 
         <a href="/" class="inline-block mb-4 text-sm font-medium text-slate-600">← Back</a>
 
-        <section>
-            <h1 class="text-2xl font-bold mb-6">F1 Teams 2026</h1>
+        <section class="grid grid-cols-1 md:grid-cols-2 gap-6">
 
-            <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
+            <a>
+                <img src="/images/excel.png" alt="Excel Testplan Screenshot" class="rounded shadow">
+            </a>
 
-                <article class="border rounded h-28 flex items-center justify-center">Mclaren</article>
-                <article class="border rounded h-28 flex items-center justify-center">Mercedes</article>
-                <article class="border rounded h-28 flex items-center justify-center">Redbull</article>
-                <article class="border rounded h-28 flex items-center justify-center">Ferrari</article>
+            <a>
+                <img src="/images/word.png" alt="Word Seo Screenshot" class="rounded shadow">
+            </a>
 
-                <article class="border rounded h-28 flex items-center justify-center">Audi</article>
-                <article class="border rounded h-28 flex items-center justify-center">Aston Martin</article>
-                <article class="border rounded h-28 flex items-center justify-center">Alpine</article>
-                <article class="border rounded h-28 flex items-center justify-center">Williams</article>
+        </section>
 
-                <div class="col-span-2 md:col-span-4 flex flex-col md:flex-row justify-center gap-6">
-                    <article class="border rounded h-28 w-full md:w-1/2 flex items-center justify-center">Cadillac</article>
-                </div>
-
-            </div>
-        </section
-
-    </main>a
+    </main>
 
     <aside class="hidden md:block col-span-2 space-y-6">
         <div class="bg-white h-40 shadow rounded flex items-center justify-center">Ad Space</div>
