--- a/static/seo.html
+++ b/static/seo.html
@@ -20,6 +20,7 @@
             <a href="/drivers">Drivers</a>
             <a href="/champions">Champions</a>
             <a href="/seo">Seo</a>
+            <a href="/screenshots">Screenshots</a>
         </nav>
     </div>
 
@@ -29,6 +30,7 @@
             <a href="/drivers" class="py-2 font-medium">Drivers</a>
             <a href="/champions" class="py-2 font-medium">Champions</a>
             <a href="/seo" class="py-2 font-medium">Seo</a>
+            <a href="/screenshots" class="py-2 font-medium">Screenshots</a>
         </div>
     </div>
 </header>
