Last changes for final

--- a/static/screenshots.html
+++ b/static/screenshots.html
@@ -20,7 +20,7 @@
             <a href="/drivers">Drivers</a>
             <a href="/champions">Champions</a>
             <a href="/seo">Seo</a>
-            <a href="/screenshots">Seo</a>
+            <a href="/screenshots">Screenshots</a>
         </nav>
     </div>
 
@@ -51,7 +51,7 @@
         <section class="grid grid-cols-1 md:grid-cols-2 gap-6">
 
             <a>
-                <img src="/images/excel.png" alt="Excel Testplan Screenshot" class="rounded shadow">
+                <img src="/images/excel.png" alt="Excel" class="rounded shadow w-64">
             </a>
 
             <a>
